[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/guiTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/battle/ui/ItemUI.gd" type="Script" id=2]
[ext_resource path="res://ui/battle/styles/InfoPanelStyleBox.tres" type="StyleBox" id=3]

[node name="PanelContainer" type="PanelContainer"]
margin_right = 200.0
margin_bottom = 112.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 151.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 186.0
margin_bottom = 70.0
custom_styles/panel = ExtResource( 3 )

[node name="Bg" type="ColorRect" parent="VBoxContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 184.0
margin_bottom = 68.0
color = Color( 0.117647, 0.384314, 0.376471, 1 )

[node name="NameLabel" type="Label" parent="VBoxContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 184.0
margin_bottom = 68.0
theme = ExtResource( 1 )
text = "Small Health Poitoon of Grandeur"
align = 1
valign = 1
autowrap = true

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 186.0
margin_bottom = 144.0
custom_styles/panel = ExtResource( 3 )

[node name="Bg" type="ColorRect" parent="VBoxContainer/PanelContainer3"]
margin_left = 2.0
margin_top = 2.0
margin_right = 184.0
margin_bottom = 68.0
color = Color( 0.12549, 0.192157, 0.207843, 1 )

[node name="DescLabel" type="Label" parent="VBoxContainer/PanelContainer3"]
margin_left = 2.0
margin_top = 2.0
margin_right = 184.0
margin_bottom = 68.0
theme = ExtResource( 1 )
text = "Increases max health of the player by +10"
align = 1
valign = 1
autowrap = true
